--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,10 @@ repositories {
 }
 
 dependencies {
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile('org.springframework.boot:spring-boot-devtools')
 	compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'
+	compile('com.h2database:h2:1.4.197')
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
